--- a/about.html
+++ b/about.html
@@ -315,7 +315,7 @@
                     <a href="" class="footer_links">Portfolio</a>
                     <a href="" class="footer_links">Price Guide</a>
                     <a href="" class="footer_links">Contact Us</a>
-                    <a href="" class="footer_links">Testimonial</a>
+                    <a href="testimonial.html" class="footer_links">Testimonial</a>
                 </div>
                 <div class="col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
                     <h4>Keywords</h4>
@@ -323,7 +323,7 @@
                     <a href="" class="footer_links">Portfolio</a>
                     <a href="" class="footer_links">Price Guide</a>
                     <a href="" class="footer_links">Contact Us</a>
-                    <a href="" class="footer_links">Testimonial</a>
+                    <a href="testimonial.html" class="footer_links">Testimonial</a>
                 </div>
             </div>
         </div>
