--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/main-style.css">
+    
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <style>
+  /* Make the image fully responsive */
+  .carousel-inner img {
+    width: 100%;
+    height: 100%;
+  }
+  </style>
 </head>
 
 <body>
@@ -92,17 +101,32 @@
         </nav>
     </header>
 
-    <!-- BANNER START HERE -->
-    <div class="banner">
-        <div class="owl-carousel owl-theme">
-            <div class="item">
-                <img src="assets/images/banner.jpg" class="img-fluid" alt="">
-            </div>
-            <div class="item">
-                <img src="assets/images/banner-2.jpg" class="img-fluid" alt="">
-            </div>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+      </ul>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="assets/images/banner.jpg" alt="" >   
         </div>
-    </div> <!-- BANNER END HERE -->
+        <div class="carousel-item">
+          <img src="assets/images/banner-2.jpg" alt="" >
+        </div>
+         <div class="carousel-item">
+          <img src="assets/images/banner-3.jpg" alt="" >
+          <div class="carousel-caption">
+        <h2>Strawberry Summer Dream Cake!</h2>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
 
     <!-- WE ARE SPECIALIZED IN START HERE -->
     <section class="specialised mt-0">
@@ -256,7 +280,7 @@
                     <a href="" class="footer_links">Portfolio</a>
                     <a href="" class="footer_links">Price Guide</a>
                     <a href="" class="footer_links">Contact Us</a>
-                    <a href="" class="footer_links">Testimonial</a>
+                    <a href="testimonial.html" class="footer_links">Testimonial</a>
                 </div>
                 <div class="col-md-6 col-lg-3 mt-4 mt-lg-0 text-center">
                     <h4>Keywords</h4>
@@ -264,7 +288,7 @@
                     <a href="" class="footer_links">Portfolio</a>
                     <a href="" class="footer_links">Price Guide</a>
                     <a href="" class="footer_links">Contact Us</a>
-                    <a href="" class="footer_links">Testimonial</a>
+                    <a href="testimonial.html" class="footer_links">Testimonial</a>
                 </div>
             </div>
         </div>
